[workspace]
resolver = "2"

members = [
    "crates/lunaris-core",
    "crates/lunaris-runtime",
    "crates/lunaris-renderer",
    "crates/lunaris-editor",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gabrielima7/Lunaris"
homepage = "https://lunaris.dev"
documentation = "https://docs.lunaris.dev"
readme = "README.md"
keywords = ["game-engine", "gamedev", "graphics", "ecs", "rendering"]
categories = ["game-engines", "graphics", "rendering"]

[workspace.dependencies]
glam = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
parking_lot = "0.12"
rayon = "1.8"
crossbeam = "0.8"
hashbrown = "0.14"
smallvec = "1.11"
bitflags = "2.4"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.24"
rand = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true

[profile.bench]
opt-level = 3
debug = false
lto = true
