[package]
name = "lunaris-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core utilities and types for the Lunaris Game Engine"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "core_benchmarks"
harness = false
