[package]
name = "lunaris-physics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Physics engine for the Lunaris Game Engine"

[lints]
workspace = true

[dependencies]
lunaris-core.workspace = true
glam.workspace = true
tracing.workspace = true

# Physics dependencies
rapier2d = { version = "0.17", optional = true }
rapier3d = { version = "0.17", optional = true }

[features]
default = ["2d"]
2d = ["rapier2d"]
3d = ["rapier3d"]
