[package]
name = "lunaris-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Game runtime for the Lunaris Game Engine"

[lints]
workspace = true

[dependencies]
lunaris-core.workspace = true
lunaris-ecs.workspace = true
lunaris-renderer.workspace = true
lunaris-physics.workspace = true
lunaris-audio.workspace = true
lunaris-scripting.workspace = true
lunaris-assets.workspace = true
winit.workspace = true
tracing.workspace = true
glam.workspace = true
serde.workspace = true

[[bin]]
name = "lunaris"
path = "src/main.rs"
