[package]
name = "lunaris-scripting"
version = "0.1.0"
edition = "2021"
description = "Visual scripting and Lua integration for Lunaris Engine"
license = "MIT"

[dependencies]
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
